--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners-kit": "^1.9.1",
+    "recharts": "^2.1.9",
+    "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
